--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
   "trailingComma": "es5",
   "tabWidth": 2,
   "semi": true,
-  "endOfLine": "auto"
+  "endOfLine": "auto",
+  "extends": ["plugin:prettier/recommended"]
 }
