--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@nextui-org/theme": "2.2.11",
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
+		"@tabler/icons-react": "^3.22.0",
 		"clsx": "2.1.1",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
@@ -48,9 +49,9 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-unused-imports": "4.1.4",
 		"postcss": "8.4.38",
+		"prettier": "3.3.3",
 		"tailwind-variants": "0.1.20",
 		"tailwindcss": "3.4.3",
-		"typescript": "5.6.3",
-		"prettier": "3.3.3"
+		"typescript": "5.6.3"
 	}
 }
